# apcStepper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ios.toolchain.cmake  modules
Laboratory/chatGPT/PluginSequencerMIDI/: CMakeLists.txt
Laboratory/chatGPT/PluginSequencerMIDI/Source/: PluginProcessor.h
PluginSequencerMIDI/: CMakeLists.txt  modules
PluginSequencerMIDI/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginProcessorEditor.h
Source/: Main.cpp  MainComponent.h  StepperApp.h  grokit.sh
Source/App/: Main.cpp  MidiControls.cpp  MidiControls.h  StepperApplication.cpp  StepperApplication.h  StepperDialog.cpp  StepperDialog.h
Source/Components/: LOAD81Component.h
Source/Plugin/: Common.h  MIDIArpeggiator.cpp  MIDIArpeggiator.h  MIDIArpeggiatorEditor.cpp  MIDIArpeggiatorEditor.h  MIDIArpeggiatorProcessor.cpp  MidiProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RowToggle.h  ShiftToggleButton.h  ShiftToggleSquareButton.h  ToggleButton.h  ToggleIconButton.h  ToggleSquare.h  ToggleSquareShift.cpp  ToggleSquareShift.h  Utils.h  apcAboutBox.h  apcControlPanel.h  apcLog.cpp  apcLog.h  apcNoteObject.h  apcResizeableArray.cpp  apcResizeableArray.h  apcRightPanel.cpp  apcRightPanel.h  apcSequencerProcessor.cpp  apcSequencerProcessor.h  apcSequencerProcessorEditor.cpp  apcSequencerProcessorEditor.h  apcShiftToggleParameterButton.h  apcStepperGrid.h  apcStepperMainEditor.cpp  apcStepperMainEditor.h  apcStepperMainProcessor.cpp  apcStepperMainProcessor.h  apcStepperStep.h  (+22 more)
Source/Plugin/Arpeggiator/: MIDIArpeggiatorEditor.cpp  MIDIArpeggiatorEditor.h  MIDIArpeggiatorProcessor.h
ios-build/: CMakeCache.txt  cmake_install.cmake
ios-build/CMakeScripts/: ReRunCMake.make
ios-build/Debug/: juce_vst3_helper
ios-build/apcAPP_artefacts/JuceLibraryCode/: Info.txt
ios-build/apcAPP_artefacts/JuceLibraryCode/Debug/: Defs.txt
ios-build/apcAPP_artefacts/JuceLibraryCode/RelWithDebInfo/: Defs.txt
ios-build/apcAPP_artefacts/JuceLibraryCode/apcAPP/: Info.plist
ios-build/apcStepper.xcodeproj/: project.pbxproj
ios-build/apcStepper.xcodeproj/project.xcworkspace/xcuserdata/jayvaughan.xcuserdatad/: UserInterfaceState.xcuserstate
ios-build/apcStepper.xcodeproj/xcuserdata/jayvaughan.xcuserdatad/xcschemes/: xcschememanagement.plist
ios-build/apcStepper_artefacts/Debug/AU/apcStepper.component/Contents/: Info.plist
ios-build/apcStepper_artefacts/Debug/AUv3/apcStepper.appex/Contents/: Info.plist
ios-build/apcStepper_artefacts/Debug/VST3/apcStepper.vst3/Contents/: Info.plist
ios-build/apcStepper_artefacts/JuceLibraryCode/: Info.txt
ios-build/apcStepper_artefacts/JuceLibraryCode/Debug/: Defs.txt
ios-build/apcStepper_artefacts/JuceLibraryCode/MinSizeRel/: Defs.txt
ios-build/apcStepper_artefacts/JuceLibraryCode/apcStepper_AU/: Info.plist
ios-build/apcStepper_artefacts/JuceLibraryCode/apcStepper_AUv3/: Info.plist
ios-build/apcStepper_artefacts/JuceLibraryCode/apcStepper_Standalone/: Info.plist
ios-build/apcStepper_artefacts/JuceLibraryCode/apcStepper_VST3/: Info.plist
ios-build/juce_binarydata_Assets/JuceLibraryCode/: BinaryData.h  BinaryData1.cpp  BinaryData2.cpp  BinaryData3.cpp  BinaryData4.cpp  BinaryData5.cpp  BinaryData6.cpp  BinaryData7.cpp  BinaryData8.cpp  input_file_list
ios-build/modules/juce/: JUCEExportConfig.cmake  cmake_install.cmake
ios-build/modules/juce/CMakeScripts/: ReRunCMake.make
ios-build/modules/juce/JUCE.xcodeproj/: project.pbxproj
ios-build/modules/juce/modules/: cmake_install.cmake
ios-build/modules/juce/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  cmake_install.cmake
ios-build/modules/juce/tools/CMakeScripts/: ReRunCMake.make
ios-build/modules/juce/tools/JUCE.xcodeproj/: project.pbxproj
ios-build/modules/juce/tools/modules/: cmake_install.cmake
ios-build/modules/melatonin_inspector/: cmake_install.cmake
ios-build/modules/melatonin_inspector/CMakeScripts/: ReRunCMake.make
ios-build/modules/melatonin_inspector/MelatoninInspector.xcodeproj/: project.pbxproj
modules/: tracktion_engine
reaperTestProjects/: Untitled.RPP  apcSequencerPluginTest.RPP
reaperTestProjects/Backups/: Untitled-2025-01-10_152942.rpp-bak  apcSequencerPluginTest-2025-01-10_153000.rpp-bak  apcSequencerPluginTest-2025-03-31_165642.rpp-bak  apcSequencerPluginTest-2025-03-31_165749.rpp-bak  apcSequencerPluginTest-2025-04-09_005338.rpp-bak  apcSequencerPluginTest-2025-04-09_005943.rpp-bak  apcSequencerPluginTest-2025-04-09_010049.rpp-bak
tests/ableton/test_plugin Project/: test_plugin.als
tests/ableton/test_plugin Project/Backup/: test_plugin [2025-05-02 134919].als
tests/reaper/: test_plugin.RPP
tests/reaper/Backups/: test_plugin-2025-05-02_135013.rpp-bak
tests/reaper/reaperTestProjects/: apcSequencerPluginTest.RPP  test_plugin.RPP
tests/reaper/reaperTestProjects/Backups/: Untitled-2025-04-09_183225.rpp-bak  Untitled-2025-04-10_220513.rpp-bak  Untitled-2025-04-13_093056.rpp-bak  Untitled-2025-04-13_094941.rpp-bak  Untitled-2025-04-13_095113.rpp-bak  Untitled-2025-04-13_095246.rpp-bak  Untitled-2025-04-13_100103.rpp-bak  Untitled-2025-04-13_100118.rpp-bak  Untitled-2025-04-13_100154.rpp-bak  Untitled-2025-04-13_100404.rpp-bak  Untitled-2025-04-17_205638.rpp-bak  apcSequencerPluginTest-2025-03-16_211957.rpp-bak  apcSequencerPluginTest-2025-03-31_165642.rpp-bak  apcSequencerPluginTest-2025-03-31_165749.rpp-bak  apcSequencerPluginTest-2025-04-08_184806.rpp-bak  apcSequencerPluginTest-2025-04-08_234921.rpp-bak  apcSequencerPluginTest-2025-04-09_005338.rpp-bak  apcSequencerPluginTest-2025-04-09_010049.rpp-bak
tests/reaper/test_plugin_2/: Untitled.RPP
